# DesignPatterns

./: .gitignore  Patterns.cpp  Patterns.sln  Patterns.vcxproj  Patterns.vcxproj.filters  README.md
0. UML/1. Traffic simulator/: .clang-uml  1. Traffic simulator.vcxproj  1. Traffic simulator.vcxproj.filters  Logistics.h  SeaLogistics.h  Transport.h  Truck.h  compile_commands.json  main.cpp
1. Factory method/1. Traffic simulator/: 1. Traffic simulator.sln  1. Traffic simulator.vcxproj  1. Traffic simulator.vcxproj.filters  README.md  Ship.h  main.cpp
1. Factory method/2. Coffee shop/: .clang-uml  2. Coffee shop.cpp  2. Coffee shop.sln  2. Coffee shop.vcxproj  2. Coffee shop.vcxproj.filters  README.md  compile_commands.json  main.cpp
1. Factory method/2. Image gallery/: 2. Image gallery.cpp  2. Image gallery.sln  2. Image gallery.vcxproj  (+1 more)
Exam/: Demon.h  DemonFactory.cpp  DemonFactory.h  Exam.sln  Exam.vcxproj  Exam.vcxproj.filters  GameScene.cpp  GameScene.h  Hound.cpp  Hound.h  HoundFactory.cpp  HoundFactory.h  Imp.cpp  Imp.h  ImpFactory.cpp  ImpFactory.h  Monster.h  MonsterFactory.h  Zombie.h  ZombieFactory.cpp  ZombieFactory.h  main.cpp
FactoryMethod/Fleet/: CMakeLists.txt  Fleet.cpp  Fleet.h  Mercedes.cpp  Mercedes.h  main.cpp
FactoryMethod/Freight transportation/: AirLogistics.cpp  AirLogistics.h  CMakeLists.txt  LogisticCompany.h  Logistics.cpp  Logistics.h  Plane.cpp  Plane.h  README.md  RoadLogistics.cpp  RoadLogistics.h  SeaLogistics.cpp  SeaLogistics.h  Ship.cpp  Ship.h  Transport.cpp  Transport.h  Truck.cpp  Truck.h  main.cpp
(+554 files in other folders)
